--- a/src/SortingVisualizer/SortingVisualizer.css
+++ b/src/SortingVisualizer/SortingVisualizer.css
@@ -19,8 +19,12 @@
   width: 30px;
   text-align: center;
   text-decoration: none;
-  margin: 1px 5px;
+  margin: 30px 10px;
   border-radius: 50%;
+}
+
+body{
+  background-color:white;
 }
 
 
